--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@react-three/drei": "^9.105.6",
-    "@react-three/fiber": "^8.16.6",
+    "@react-three/drei": "^9.107.3",
+    "@react-three/fiber": "^8.16.8",
     "@splinetool/loader": "^1.4.0",
     "@splinetool/runtime": "^1.3.8",
     "@testing-library/jest-dom": "^5.17.0",
@@ -44,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "7.21.11",
     "tailwindcss": "^3.4.3"
   }
 }
